Fix positioning for mobile header view and fix text alignment upon resizing for banner

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,7 +7,7 @@ header {
   padding: 15px 20px;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: calc(100vw - (100vw - 100%));
   justify-content: space-between;
   background-color: transparent;
 }
@@ -17,7 +17,7 @@ header {
   margin: 0;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: calc(100vw - (100vw - 100%));
   justify-content: space-between;
   background-color: transparent;
   position: relative;
@@ -39,6 +39,10 @@ header {
   }
 
   .wrapper2 {
+    display: none;
+  }
+
+  .header2 {
     display: none;
   }
 }
@@ -67,14 +71,13 @@ header {
 }
 
 .header2 {
-  width: 100%;
+  width: calc(100vw - (100vw - 100%));
+  padding: 0 20px;
   justify-content: center;
   justify-items: center;
   text-align: center;
   background-color: black;
-  position: absolute;
-  top: 100px;
-  box-sizing: border-box;
+  position: block;
 }
 
 .logoAndTitle {
